--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,17 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# -tfr\n",
-    "# -i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,22 +504,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# env.panda.close()\n"
+    "# env.panda.close()\n",
+    "import roboticsPlayroomPybullet"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_dir=/home/sholto/Desktop/AI/pandaRL/pandaRL/envs\n",
-      "current_dir=/home/sholto/Desktop/AI/pandaRL/pandaRL/envs\n"
+      "current_dir=/home/sholto/Desktop/AI/roboticsPlayroomPybullet/roboticsPlayroomPybullet/envs\n",
+      "current_dir=/home/sholto/Desktop/AI/roboticsPlayroomPybullet/roboticsPlayroomPybullet/envs\n"
      ]
     },
     {
@@ -554,7 +545,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/sholto/Desktop/AI/pandaRL/pandaRL/envs\n"
+      "/home/sholto/Desktop/AI/roboticsPlayroomPybullet/roboticsPlayroomPybullet/envs\n"
      ]
     }
    ],
@@ -1649,18 +1640,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
