minimal teleop example

--- a/notebooks/Minimal Example.ipynb
+++ b/notebooks/Minimal Example.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -94,6 +94,20 @@
      "output_type": "stream",
      "text": [
       "/home/sholto/Desktop/AI/learning_from_play/data/UR5/states_and_ims/0/ims\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-00c04f963113>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     40\u001b[0m             \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateToggles\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# need to do it when when you restore from a state as colors are not saved\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m                 \u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0macts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mstart\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mfull_state_save_interval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/AI/RoboticsPlayroomPybullet/roboticsPlayroomPybullet/envs/environments.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m    957\u001b[0m         \u001b[0mtargetPoses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mperform_action\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    958\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrunSimulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 959\u001b[0;31m         \u001b[0mobs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    960\u001b[0m         \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_reward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'achieved_goal'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'desired_goal'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    961\u001b[0m         \u001b[0mdone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/AI/RoboticsPlayroomPybullet/roboticsPlayroomPybullet/envs/environments.py\u001b[0m in \u001b[0;36mcalc_state\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    525\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    526\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplay\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 527\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateToggles\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# good place to update the toggles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    528\u001b[0m         \u001b[0marm_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_actor_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m         \u001b[0marm_elements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'pos'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/AI/RoboticsPlayroomPybullet/roboticsPlayroomPybullet/envs/environments.py\u001b[0m in \u001b[0;36mupdateToggles\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    208\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbullet_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchangeVisualShape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrgbaColor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    209\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 210\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbullet_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchangeVisualShape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrgbaColor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    211\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'dial'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -146,6 +160,105 @@
     "\n",
     "            start += full_state_save_interval\n",
     "            end = min(start+full_state_save_interval, set_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'obs_quat': array([-1.05122246e-01, -1.58003315e-01, -3.55988974e-03, -9.47304070e-03,\n",
+       "        -9.51900929e-02,  1.15734883e-01,  9.88663018e-01,  5.44099584e-02,\n",
+       "        -9.76497903e-02,  1.10748991e-01, -9.99999975e-06, -2.50560520e-15,\n",
+       "         8.16640219e-15,  9.60237384e-01, -2.79184759e-01, -4.55279015e-02,\n",
+       "         4.82954718e-02,  2.99999993e-02,  0.00000000e+00], dtype=float32),\n",
+       " 'achieved_goal': array([-9.7649790e-02,  1.1074899e-01, -9.9999997e-06, -2.5056052e-15,\n",
+       "         8.1664022e-15,  9.6023738e-01, -2.7918476e-01, -4.5527902e-02,\n",
+       "         4.8295472e-02,  2.9999999e-02,  0.0000000e+00], dtype=float32),\n",
+       " 'desired_goal': array([-0.12080648,  0.24572381,  0.09474243], dtype=float32),\n",
+       " 'controllable_achieved_goal': array([-0.10512225, -0.15800332, -0.00355989,  0.05440996], dtype=float32),\n",
+       " 'full_positional_state': array([-1.05122246e-01, -1.58003315e-01, -3.55988974e-03, -9.47304070e-03,\n",
+       "        -9.51900929e-02,  1.15734883e-01,  9.88663018e-01,  5.44099584e-02,\n",
+       "        -9.76497903e-02,  1.10748991e-01, -9.99999975e-06, -2.50560520e-15,\n",
+       "         8.16640219e-15,  9.60237384e-01, -2.79184759e-01, -4.55279015e-02,\n",
+       "         4.82954718e-02,  2.99999993e-02,  0.00000000e+00], dtype=float32),\n",
+       " 'joints': [-1.305407923559522,\n",
+       "  -2.0782402326217735,\n",
+       "  -1.5820561001406908,\n",
+       "  -1.2378815789558382,\n",
+       "  1.6175551368084176,\n",
+       "  1.6002646764005428,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " 'velocity': array([ 0.04474132, -0.1204387 , -0.06955998, -0.14583088, -0.02473012,\n",
+       "        -0.48651519]),\n",
+       " 'img': array([[[217, 217, 217],\n",
+       "         [204, 204, 204],\n",
+       "         [221, 221, 221],\n",
+       "         ...,\n",
+       "         [227, 227, 227],\n",
+       "         [221, 221, 221],\n",
+       "         [208, 208, 208]],\n",
+       " \n",
+       "        [[224, 224, 224],\n",
+       "         [211, 211, 211],\n",
+       "         [227, 227, 227],\n",
+       "         ...,\n",
+       "         [227, 227, 227],\n",
+       "         [221, 221, 221],\n",
+       "         [208, 208, 208]],\n",
+       " \n",
+       "        [[227, 227, 227],\n",
+       "         [219, 219, 219],\n",
+       "         [206, 206, 206],\n",
+       "         ...,\n",
+       "         [227, 227, 227],\n",
+       "         [222, 222, 222],\n",
+       "         [209, 209, 209]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[160, 160, 160],\n",
+       "         [162, 162, 162],\n",
+       "         [163, 163, 163],\n",
+       "         ...,\n",
+       "         [207, 181, 156],\n",
+       "         [209, 184, 159],\n",
+       "         [205, 181, 154]],\n",
+       " \n",
+       "        [[161, 161, 161],\n",
+       "         [162, 162, 162],\n",
+       "         [163, 163, 163],\n",
+       "         ...,\n",
+       "         [207, 183, 157],\n",
+       "         [211, 186, 160],\n",
+       "         [210, 186, 160]],\n",
+       " \n",
+       "        [[161, 161, 161],\n",
+       "         [162, 162, 162],\n",
+       "         [163, 163, 163],\n",
+       "         ...,\n",
+       "         [212, 188, 161],\n",
+       "         [209, 187, 157],\n",
+       "         [209, 184, 158]]], dtype=uint8),\n",
+       " 'observation': array([-1.05122246e-01, -1.58003314e-01, -3.55988981e-03, -4.15010566e-02,\n",
+       "        -1.87119174e-01,  2.36958038e-01,  5.44099570e-02, -9.76497912e-02,\n",
+       "         1.10748995e-01, -1.00000000e-05, -2.50560519e-15,  8.16640196e-15,\n",
+       "         9.60237406e-01, -2.79184751e-01, -4.55279005e-02,  4.82954735e-02,\n",
+       "         3.00000000e-02,  0.00000000e+00]),\n",
+       " 'gripper_proprioception': 0}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o"
    ]
   },
   {
