--- a/data_collection/GCS_data_transfer.ipynb
+++ b/data_collection/GCS_data_transfer.ipynb
@@ -7,7 +7,7 @@
       "name": "GCS_data_transfer.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPI0KU4vFw9i+PRvRdtMdne",
+      "authorship_tag": "ABX9TyMhPEj0/FEt4LAvdrRK15G7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "STORAGE_PATH = Path('/content/drive/My Drive/Robotic Learning')\n",
         "print(f'Storage path: {STORAGE_PATH}')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +84,7 @@
       "source": [
         "DATA_PATHS=   [STORAGE_PATH/'data'/x for x in [\"Unity/UR5_train\",\"Unity/UR5_test\"]]"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
         "# Which should be free! https://cloud.google.com/storage/pricing\n",
         "# https://cloud.google.com/tpu/docs/types-zones\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,7 @@
         "from google.colab import auth\n",
         "auth.authenticate_user()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
         "!gcloud config set project {project_id}\n",
         "!gsutil ls"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,15 +166,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Qlp5TH8TAH4X",
-        "outputId": "d8a7b7d6-f9d2-4876-bfa7-a20c816b83eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d8a7b7d6-f9d2-4876-bfa7-a20c816b83eb"
       },
       "source": [
         "!gsutil ls"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +208,7 @@
       "source": [
         "!ls drive/MyDrive/Robotic\\ Learning/data"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
       "source": [
         "bucket_name = 'lfp_europe_west4_a'"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,9 +241,9 @@
         "outputId": "c89c94c6-a5dd-4f03-a1b5-fe984fe1f9ad"
       },
       "source": [
-        "!gsutil -m cp -r drive/MyDrive/Robotic\\ Learning/data/Unity* gs://{bucket_name}/Unity/"
+        "!gsutil -m cp -r drive/MyDrive/Robotic\\ Learning/data/Unity* gs://{bucket_name}/"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
