--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,26 +146,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sholto/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144 from C header, got 152 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/home/sholto/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144 from C header, got 152 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/home/sholto/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144 from C header, got 152 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/home/sholto/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144 from C header, got 152 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Using local setup\n",
-      "Working path: /home/sholto/Desktop/AI/learning_from_play\n",
-      "Storage path: /home/sholto/Desktop/AI/learning_from_play\n"
+      "Working path: /catkin_ws/src/robotics/learning_from_play\n",
+      "Storage path: /catkin_ws/src/robotics/learning_from_play\n"
      ]
     }
    ],
@@ -189,7 +175,7 @@
     "import importlib\n",
     "arm = 'UR5'\n",
     "\n",
-    "TEST_DATASET = \"UR5_slow_gripper_test\" \n",
+    "TEST_DATASET = \"UR5_PYBULLET\" \n",
     "print('Using local setup')\n",
     "WORKING_PATH = Path().absolute().parent\n",
     "print(f'Working path: {WORKING_PATH}')\n",
@@ -203,9 +189,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/catkin_ws/src/robotics/learning_from_play/data/UR5_PYBULLET')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TEST_DATA_PATHS "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:2: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<ipython-input-4-6225826cff16>:2: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if config.DEVICE is 'GPU':\n"
+     ]
+    }
+   ],
    "source": [
     "physical_devices = tf.config.list_physical_devices(args.device)\n",
     "if config.DEVICE is 'GPU':\n",
@@ -227,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,25 +258,31 @@
     "else:\n",
     "    GLOBAL_BATCH_SIZE = 512\n",
     "\n",
-    "dl = lfp.data.PlayDataloader(include_imgs = args.images, batch_size=GLOBAL_BATCH_SIZE,  window_size=args.window_size_max, min_window_size=args.window_size_min)"
+    "\n",
+    "dl = lfp.data.PlayDataloader(include_imgs = args.images, include_gripper_imgs = args.gripper_images, sim=args.sim, batch_size=GLOBAL_BATCH_SIZE,  window_size=args.window_size_max, min_window_size=args.window_size_min)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UR5_PYBULLET: 100%|██████████| 52/52 [00:01<00:00, 27.78it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{   'acts': TensorSpec(shape=(16, None, 7), dtype=tf.float32, name=None),\n",
-      "    'dataset_path': TensorSpec(shape=(16, None), dtype=tf.int32, name=None),\n",
-      "    'goals': TensorSpec(shape=(16, None, 11), dtype=tf.float32, name=None),\n",
-      "    'imgs': TensorSpec(shape=(16, None, 200, 200, 3), dtype=tf.uint8, name=None),\n",
-      "    'obs': TensorSpec(shape=(16, None, 18), dtype=tf.float32, name=None),\n",
-      "    'proprioceptive_features': TensorSpec(shape=(16, None, 7), dtype=tf.float32, name=None),\n",
-      "    'tstep_idxs': TensorSpec(shape=(16, None), dtype=tf.int32, name=None)}\n"
+      "{   'acts': TensorSpec(shape=(512, None, 8), dtype=tf.float32, name=None),\n",
+      "    'dataset_path': TensorSpec(shape=(512, None, 1), dtype=tf.int32, name=None),\n",
+      "    'goals': TensorSpec(shape=(512, None, 11), dtype=tf.float32, name=None),\n",
+      "    'obs': TensorSpec(shape=(512, None, 19), dtype=tf.float32, name=None),\n",
+      "    'tstep_idxs': TensorSpec(shape=(512, None, 1), dtype=tf.int32, name=None)}\n"
      ]
     }
    ],
@@ -270,14 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Obs: (N,18), Acts: (N,7), Goals: (N,11)\n"
+      "Obs: (N,19), Acts: (N,8), Goals: (N,11)\n"
      ]
     }
    ],
@@ -341,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
