--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -109,8 +109,23 @@
     "-i\n",
     "-gi\n",
     "\n",
+    "'''.split())\n",
     "\n",
-    "\n",
+    "args = parser.parse_args('''\n",
+    "IMB0_01\n",
+    "--train_dataset UR5_train\n",
+    "--test_dataset UR5_test\n",
+    "-tfr\n",
+    "-s GCS\n",
+    "-d GPU\n",
+    "-b 512\n",
+    "-la 2048\n",
+    "-le 512\n",
+    "-lp 2048\n",
+    "-z 256\n",
+    "-lr 3e-4\n",
+    "-B 0.01\n",
+    "-n 5\n",
     "'''.split())\n",
     "\n",
     "# args = parser.parse_args('''\n",
