--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -89,6 +89,7 @@
     "parser.add_argument('-gi', '--gripper_images', default=False, action='store_true')\n",
     "parser.add_argument('-sim', '--sim', default='Unity', help='Unity/Pybullet')\n",
     "parser.add_argument('-vq', '--discrete', default=False, action='store_true')\n",
+    "parser.add_argument('-nm', '--normalize', default=False, action='store_true')\n",
     "parser.add_argument('--fp16', default=False, action='store_true')\n",
     "\n",
     "args = parser.parse_args('''\n",
@@ -265,7 +266,7 @@
     "else:\n",
     "    GLOBAL_BATCH_SIZE = 512\n",
     "\n",
-    "dl = lfp.data.PlayDataloader(include_imgs = args.images, include_gripper_imgs = args.gripper_images, sim=args.sim, batch_size=GLOBAL_BATCH_SIZE,  window_size=args.window_size_max, min_window_size=args.window_size_min)"
+    "dl = lfp.data.PlayDataloader(normalize=args.normalize, include_imgs = args.images, include_gripper_imgs = args.gripper_images, sim=args.sim, batch_size=GLOBAL_BATCH_SIZE,  window_size=args.window_size_max, min_window_size=args.window_size_min)"
    ]
   },
   {
