ready for full go unity

--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,24 @@
       "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/15\n",
       "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/16\n",
       "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/17\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/18\n"
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/18\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/19\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/20\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/21\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/22\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/23\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/24\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/25\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/26\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/27\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/28\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/29\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/30\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/31\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/32\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/33\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/34\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/35\n"
      ]
     }
    ],
@@ -310,6 +327,24 @@
     "            for data in it:\n",
     "                byte_stream = serialise(data)\n",
     "                file_writer.write(byte_stream)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-385b1bfc26a4>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-385b1bfc26a4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    gsutil cp *.tfrecords gs://lfp_europe_west4_a/data/Unity/envHz25/tf_records\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "gsutil cp *.tfrecords gs://lfp_europe_west4_a/data/Unity/envHz25/tf_records"
    ]
   },
   {
@@ -761,7 +796,65 @@
      ]
     }
    ],
+   "source": [
+    "# gsutil cp tagged_labels.tfrecords gs://lfp_europe_west4_a/data/Unity/envHz25_test/tf_records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random inspection stuff"
+   ]
   },
   {
    "cell_type": "code",
