--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -620,7 +620,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Okay! So we want to replicate the testing!"
+    "# Step 1 - this function will constantly listen for the state, and update when it has a new observation (at 25Hz)\n",
+    "shoulder_image = None\n",
+    "ros_shoulder_image = None\n",
+    "gripper_image = None\n",
+    "ros_gripper_image = None\n",
+    "proprioceptive_state = None\n",
+    "achieved_goal = None\n",
+    "full_state = None\n",
+    "velocities = None\n",
+    "last_state_arrival_time = 0\n",
+    "last_state_processed_time = 0  # unless updated then the if check will fail because 0 is too long ago\n",
+    "last_vr_controller_time = 0\n",
+    "last_state_gen_time = 0\n",
+    "new_information = False\n",
+    "\n",
+    "def process_observation(o: Observation):\n",
+    "    '''\n",
+    "    The full state will be sent out at Nh > controlHz by the env, listen to it, and save the relevant parts\n",
+    "    '''\n",
+    "    global shoulder_image, gripper_image, proprioceptive_state, \\\n",
+    "            achieved_goal, full_state, last_state_arrival_time, \\\n",
+    "            last_state_processed_time, ros_shoulder_image, ros_gripper_image, velocities, last_state_gen_time, new_information\n",
+    "    last_state_gen_time = o.time\n",
+    "    last_state_arrival_time = time.time()\n",
+    "    o.shoulderImage.data += (o.imq2 + o.imq3 + o.imq4)\n",
+    "    ros_shoulder_image = o.shoulderImage\n",
+    "    shoulder_image  = rosImg_to_numpy(ros_shoulder_image)\n",
+    "    ros_gripper_image = o.gripperImage\n",
+    "    gripper_image = rosImg_to_numpy(ros_gripper_image)\n",
+    "\n",
+    "    proprioceptive_state  = proprio_quat_to_rpy_vector(o.proprio)\n",
+    "    # print(f\"State: {proprioceptive_state}\")\n",
+    "    achieved_goal = ag_to_vector(o.ag)\n",
+    "    velocities = o.vels\n",
+    "    full_state = np.concatenate([proprioceptive_state, achieved_goal])\n",
+    "    last_state_processed_time = time.time()\n",
+    "    new_information = True\n",
+    "    \n",
+    "rospy.Subscriber(\"state\", Observation, process_observation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2, control loop - loop until we have new information, then act! Check for new info at 100\n",
+    "\n",
+    "# To reset, we'll call reset\n",
+    "\n",
+    "# Then call get state serv twice to make sure we have the latest info\n",
+    "\n",
+    "# Then we'll call reset again, and immediately start as for some reason this works better\n",
+    "while not rospy.is_shutdown() and i < 1000:"
    ]
   },
   {
