removed reqs slowing down install

--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -667,6 +667,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def flatten_obs():\n",
+    "    '''\n",
+    "    Get the right format and flatte - remeber all these are global variables implicitly updated by the subscriber\n",
+    "    '''\n",
+    "\n",
+    "    o = full_state\n",
+    "    \n",
+    "    if args.images:\n",
+    "        img_embedding = cnn(tf.expand_dims(img, 0))\n",
+    "        o = tf.squeeze(tf.concat([img_embedding, proprioceptive_features],axis=1))\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    if record_o_buff is not None:\n",
+    "        record_o_buff.append(o)\n",
+    "    return o\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 2, control loop - loop until we have new information, then act! Check for new info at 100\n",
     "\n",
     "# To reset, we'll call reset\n",
@@ -690,26 +714,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def flatten_obs(obs_dict, record_o_buff=None):\n",
-    "    '''\n",
-    "    Get the right format and flatten, e.g get joints states, velcoities, rpy or quat etc depending on what the\n",
-    "    net was trained on\n",
-    "    Also appends it to record_o_buff to record the true obs\n",
-    "    '''\n",
-    "\n",
-    "    o = obs_dict['observation']\n",
-    "    \n",
-    "    if args.images:\n",
-    "        proprioceptive_features = tf.cast(tf.expand_dims(o[:7],0), tf.float32)\n",
-    "        img = obs_dict['img']\n",
-    "        img_embedding = cnn(tf.expand_dims(img, 0))\n",
-    "        o = tf.squeeze(tf.concat([img_embedding, proprioceptive_features],axis=1))\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "    if record_o_buff is not None:\n",
-    "        record_o_buff.append(o)\n",
-    "    return o\n",
     "\n",
     "\n",
     "def choose_action(actor, o, z, goal, states=None, a_pred=None, a_true=None, replay=False, i = -0):\n",
