--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -675,13 +675,10 @@
     "    o = full_state\n",
     "    \n",
     "    if args.images:\n",
-    "        img_embedding = cnn(tf.expand_dims(img, 0))\n",
-    "        o = tf.squeeze(tf.concat([img_embedding, proprioceptive_features],axis=1))\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "    if record_o_buff is not None:\n",
-    "        record_o_buff.append(o)\n",
+    "        img_embedding = cnn(tf.expand_dims(ros_shoulder_image, 0))\n",
+    "        o = tf.squeeze(tf.concat([img_embedding, proprioceptive_state],axis=1))\n",
+    "        if args.gripper_images:\n",
+    "            gripper_embedding = \n",
     "    return o\n"
    ]
   },
